--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,9 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 RoxygenNote: 7.3.2
+VignetteBuilder: knitr
