--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: multipleITScontrol
 Type: Package
-Title: Interrupted Time Series with Controls and Multiple Interventions through a Generalised Least Squares framework
+Title: Interrupted Time Series with a Control and Multiple Interventions through a Generalised Least Squares framework
 Version: 0.1.0
 Authors@R: person("Victor", "Yu", email = "victoryu@sent.com", role = c("cre","aut"))
-Description: Functions related to performing interrupted-time series through a generalised least squares (GLS) framework. Allows for multiple interventions and controls.
+Description: Functions related to performing interrupted-time series through a generalised least squares (GLS) framework on linear outcomes. Allows for multiple interventions and a control.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
