--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: multipleITScontrol
 Type: Package
 Title: Interrupted Time Series with a Control and Multiple Interventions through a Generalised Least Squares framework
 Version: 0.1.0
-Authors@R: person("Victor", "Yu", email = "victoryu@sent.com", role = c("cre","aut"))
+Authors@R: c(person("Victor", "Yu", email = "victor.yu@hertfordshire.gov.uk", role = c("cre","aut")), person("Emily", "Dickson", role = c("ctb")))
 Description: Functions related to performing interrupted-time series through a generalised least squares (GLS) framework on linear outcomes. Allows for multiple interventions and a control.
 License: GPL (>= 3)
 Encoding: UTF-8
